--- a/sections/03-design.tex
+++ b/sections/03-design.tex
@@ -236,6 +236,7 @@ executing code for the target language at program runtime.
 
 
 \section{The Accelerate EDSL}
+\label{sec:accelerate}
 
 The current generation of graphical processing units (GPUs) are massively
 multicore processors (\S\ref{sec:gpu_computing}). They are optimised for
